checkpoint(worklog): T-02-01 Day 6 - initialize 2025-10-30 session worklogs
Initialize comprehensive worklog infrastructure for final completion day:

Worklog Files Created (2025-10-30):
- work-summary.md (7.5K): Daily objectives and acceptance criteria tracking
- notes.md (11K): Technical documentation and research findings
- commit-log.md (10K): Git operations tracking template
- TODOs-Plan.txt (23K): Detailed 5-session completion plan

Action Log Files (Session Tracking):
- DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-01.txt (Session 1: Fix test + coverage)
- DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-02.txt (Session 2: Code quality)
- DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-03.txt (Session 3: Validation)
- DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-04.txt (Session 4: PR creation)
- DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-05.txt (Session 5: Final review)

Metadata Updates:
- Added 2025-10-30 worklog entry to metadata.yaml
- Linked all 5 session action logs
- Current status: 95% complete, 18.9 hours remaining

Today's Plan (EOD UTC 2025-10-30):
Session 1: Fix failing test import_edges_follow_package_reexports (1-2h)
Session 2: Expand test coverage to >80% with 15-20 new tests (3-4h)
Session 3: Clippy + API documentation (1-2h)
Session 4: Final validation + metadata update (1h)
Session 5: Create Pull Request (30min)

Total estimated: 7-9 hours (buffer: 9.5 hours until deadline)

Pre-work Analysis Complete:
✅ Comprehensive codebase review (5,214 lines, 14 modules)
✅ Parity validation verified (6/6 fixtures ≤2% variance)
✅ Gap analysis documented (1 failing test, coverage gap)
✅ Actionable plan created with time estimates

Ready to begin Session 1 work.

Ref: docs/WORK_SESSION_CHECKPOINT_WORKFLOW.md
Ref: .artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-30-TODOs-Plan.txt

--- a/.artifacts/spec-tasks-T-02-01-graph-builder/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/metadata.yaml
@@ -123,6 +123,16 @@ worklog:
       summary: "worklogs/2025-10-29-work-summary.md"
       commits: "worklogs/2025-10-29-commit-log.md"
       notes: "worklogs/2025-10-29-notes.md"
+    - date: "2025-10-30"
+      summary: "worklogs/2025-10-30-work-summary.md"
+      commits: "worklogs/2025-10-30-commit-log.md"
+      notes: "worklogs/2025-10-30-notes.md"
+      action_logs:
+        - "worklogs/raw/DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-01.txt"
+        - "worklogs/raw/DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-02.txt"
+        - "worklogs/raw/DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-03.txt"
+        - "worklogs/raw/DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-04.txt"
+        - "worklogs/raw/DEVCOOKING-WORK-ACTIONSLOGS-2025-10-30-05.txt"
 
 metrics:
   estimated_hours: 40  # 5 days * 8 hours
