refactor(worklog): reorganize RAW logs - correct Session/Thread structure
Fix conceptual confusion between Session, Thread, and Phase:

Correct Structure:
- Task → Day → Session (work period) → Threads (work units)
- Session: One RAW log file per work session
- Thread: Continuous work units within session (numbered sequentially)
- Phase: Implementation stages (Upper Index, Tokenizer, etc.)

Changes:
- Merged incorrectly split files into single Session 01 file
- Renamed: WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt
- Deleted: WORK-SESSIONS-02-THREADS-SUMMARY (was Thread 01-02)
- Deleted: WORK-SESSIONS-03-THREADS-SUMMARY (was Thread 03)
- Updated: metadata.yaml with corrected Phase roadmap

Session 01 Complete (368 lines):
- Thread 01: Worktree initialization (07:17-07:20, 0.05h)
- Thread 02: Documentation updates (07:20-07:29, 0.15h)
- Thread 03: Planning & analysis (07:45-08:30, 0.75h)
Total: 1.2 hours, 4 commits, all with git notes

File Naming Convention:
Format: WORK-SESSIONS-{NN}-THREADS-{START}-{END}-SUMMARY-{YYYY-MM-DD}.txt
Example: WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt

Next Session:
Session 02 will start Thread 04 (Upper Index implementation)

Metadata updates:
- Added Phase 0 (Planning & Analysis)
- Clarified Phase timeline
- Added Phase 6 (Testing & Validation)

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -68,11 +68,13 @@ metrics:
 
 notes: |
   Implementation roadmap (6-8 days):
-  - Phase 1 (Days 1-2): Upper Index - Name/ID HashMap
-  - Phase 2 (Day 3): Custom Tokenizer
-  - Phase 3 (Days 3-5): BM25 Lower Index (Tantivy or custom)
-  - Phase 4 (Day 6): Hierarchical Search Strategy
-  - Phase 5 (Days 7-8): Parity & Benchmarking
+  - Phase 0 (Day 1): Priority 0 - Planning & Analysis
+  - Phase 1 (Day 1): Upper Index - Name/ID HashMap
+  - Phase 2 (Day 1): Custom Tokenizer
+  - Phase 3 (Day 1): BM25 Lower Index (Tantivy or custom)
+  - Phase 4 (Days 2): Hierarchical Search Strategy
+  - Phase 5 (Days 2): Parity & Benchmarking
+  - Phase 6 (Day 1): Testing & Validation & pre-PR)
 
   Technical risks:
   - Tokenization mismatch with LocAgent
