fix(worklog): correct Session 01 structure and add WORKLOG-HANDBOOK.md
Corrections made:
1. Renamed RAW log: WORK-SESSIONS-01-THREADS-01-02 → WORK-SESSIONS-01-THREADS-01-03
   - Session 01 contains 3 threads, not 2
   - Thread 03 is the comprehensive planning (986 lines, 0.75h)

2. Updated metadata.yaml Work Sessions structure:
   - Session 01: [Phase 0] Planning & Analysis (Threads 01-03, 1.2h) ✅ COMPLETE
     * Thread 01: Worktree initialization (0.05h)
     * Thread 02: Documentation updates (0.15h)
     * Thread 03: Comprehensive planning & roadmap (0.75h, 986 lines)
     * RAW: WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt
     * Commits: 4f834f6, 8abc915, d281dcc, d36ea10, 37cf911, 628724b

   - Session 02: [Phase 1] Upper Index Implementation (NOT STARTED)
     * Will start Phase 1 implementation
     * Thread numbering will reset to 01-XX

3. Updated actual_hours: 0.2h → 1.2h (Session 01 total)

4. Added Implementation Phases Plan with Phase 0:
   - Phase 0: Planning & Analysis (Day 1) ✅ COMPLETE
   - Phase 1: Upper Index - Name/ID HashMap (Day 1)
   - Phase 2-5: Subsequent phases

5. Created WORKLOG-HANDBOOK.md (comprehensive guide):
   - Hierarchical structure definitions
   - Work session lifecycle
   - RAW log management rules
   - Metadata update guidelines
   - Checkpoint workflow steps
   - Common mistakes and how to avoid them
   - Quick reference templates

Key Learnings:
- Thread numbering resets per session (NOT continuous across sessions)
- Session = one continuous work period (07:17-08:30 UTC = 1.2h)
- RAW log created AFTER session completes (not before)
- One RAW log per session (not per thread)

This commit establishes correct structure and prevents future mistakes.

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -8,7 +8,7 @@ task:
   status: in_progress
   start_date: "2025-10-31"
   estimated_hours: 32  # 4 days × 8 hours
-  actual_hours: 0.2  # Day 1 Session 1: 12 minutes documentation updates
+  actual_hours: 1.2  # Day 1 Session 01: 1.2h (planning & analysis complete)
 
 specs:
   prds:
@@ -67,26 +67,62 @@ metrics:
   test_coverage: 0.0
 
 notes: |
-  Implementation Phases (technical stages, 6-8 days total):
+  Implementation Phases Plan (technical stages, 6-8 days total):
+  - Phase 0: Planning & Analysis (Day 1)
   - Phase 1: Upper Index - Name/ID HashMap (Day 1)
   - Phase 2: Custom Tokenizer (Day 1)
-  - Phase 3: BM25 Lower Index - Tantivy or custom (Days 1-2)
-  - Phase 4: Hierarchical Search Strategy (Day 1)
-  - Phase 5: Parity & Benchmarking (Day 3)
+  - Phase 3: BM25 Lower Index - Tantivy or custom (Day 1)
+  - Phase 4: Hierarchical Search Strategy (Day 2)
+  - Phase 5: Parity & Benchmarking (Day 2)
 
   Work Sessions (by day):
-  - Day 1 Session 01: Planning & Analysis (Threads 01-03, 1.2h) ✅ COMPLETE
+  - Day 1 Session 01: [Phase 0] Planning & Analysis (Threads 01-03, 1.2h) ✅ COMPLETE
     * Thread 01: Worktree initialization (0.05h)
-    * Thread 02: Documentation updates (0.15h)
-    * Thread 03: Comprehensive planning (0.75h)
+    * Thread 02: Documentation updates for M2 milestone (0.15h)
+    * Thread 03: Comprehensive tasks initial analysis, planning & implementation roadmap (0.75h, 986 lines)
     * RAW: WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt
-    * Commits: 4f834f6, 8abc915, d281dcc, d36ea10, 37cf911
+    * Commits: 4f834f6, 8abc915, d281dcc, d36ea10, 37cf911, 628724b
+    * Duration: 07:17-08:30 UTC (1.2h total)
+    * Status: ✅ COMPLETE - All planning and setup finished
 
-  - Day 1 Session 02: Phase 1 Implementation - Upper Index (Threads 04+, TBD)
-    * Thread 04: NameIndex design & exact match
-    * Thread 05: Prefix match & type filtering
-    * Thread 06: Graph integration & benchmarks
+  - Day 1 Session 02: [Phase 0] re-analysis & planning for development
+    * Phase 0: Reading and re-Analysis & re-Planning DEEPRESEARCH PRDs and Issues and Tasks for development
+      - .tmp-kanban/20251031/backlog/nextsteps-tasks-analysis-result.txt
+      - spacs/prd/0.1.0-MVP-PRDs-v0/01-system-architecture.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/02-cds-index-service.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/03-cds-tools-cli.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/04-cds-agent-integration.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/05-api-specifications.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/06-rust-refactoring-plan.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/07-deployment-operations.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/08-testing-quality.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/09-implementation-roadmap.md
+      - spacs/prd/0.1.0-MVP-PRDs-v0/10-extensibility-future.md
+      - spacs/issues/04-0.1.0-mvp/README.md
+      - spacs/issues/04-0.1.0-mvp/02-index-core/00-overview.md
+      - spacs/issues/04-0.1.0-mvp/02-index-core/01-graph-build.md
+      - spacs/issues/04-0.1.0-mvp/02-index-core/02-sparse-index.md
+      - spacs/issues/04-0.1.0-mvp/02-index-core/03-service-layer.md
+      - spacs/issues/04-0.1.0-mvp/02-index-core/04-serialization-fixtures.md
+      - spacs/tasks/0.1.0-mvp/TODO.yaml
+      - spacs/tasks/0.1.0-mvp/README.md
+      - spacs/tasks/0.1.0-mvp/02-index-core/README.md
+      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-01-graph-builder.md
+      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-02-sparse-index.md
+      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-03-service-layer.md
+      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-04-serialization.md
+    * Thread ...
+    * RAW: WORK-SESSIONS-02-THREADS-01-XX-SUMMARY-2025-10-31.txt (will be created when Thread 01 begins)
+    * Status: NOT STARTED
+
+  - Day 1 Session 03: [Phase 1] Upper Index Implementation (Threads 01-XX)
+    * Phase--Session: Executing Phase 1 (Upper Index) implementation
+    * Thread 01: NameIndex design & exact match
+    * Thread 02: Prefix match & type filtering
+    * Thread 03: Graph integration & benchmarks
     * Expected: ~4-6 hours, name_index.rs + tests
+    * RAW: WORK-SESSIONS-03-THREADS-01-XX-SUMMARY-2025-10-31.txt (will be created when Thread 01 begins)
+    * Status: NOT STARTED
 
   Technical risks:
   - Tokenization mismatch with LocAgent
