checkpoint(worklog): T-02-02 Day 1 Session 02 complete - Phase 0 research baseline locked
Session 02 (10:22-10:55 UTC, 0.55h): Deep research & re-analysis for development

Completed Phase 0 research with 3 threads:
- Thread 01 (10:22-10:30): Spec alignment & implementation gap analysis
- Thread 02 (10:30-10:43): Parity assets + performance baselines review
- Thread 03 (10:43-10:55): Implementation readiness checklist & roadmap

Key Deliverables:
- Reviewed critical specs: PRD-02, PRD-06, Issue 02, T-02-02 task spec, TODO.yaml
- Analyzed parity fixtures and performance baselines (tests/fixtures/parity/)
- Established Phase 1 execution roadmap and tooling prep list
- Identified Tantivy vs custom BM25 decision framework
- Deferred lower-priority doc reviews for Session 03+

Research Outputs:
- Phase 1 implementation roadmap with sequencing
- Tooling preparation checklist (stop-words, fixture loaders, benchmarks)
- Follow-up action items for Day 1 PM and Day 2

Updated Artifacts:
- Added commit 5eb24a3 to metadata.yaml git_commits section
- Updated cumulative metrics (lines_added: 1,450, lines_deleted: 575)
- Created WORK-SESSIONS-02-THREADS-01-03-SUMMARY-2025-10-31.txt
- Updated actual_hours: 1.8h (Session 01: 1.2h + Session 02: 0.55h)

Phase 0 Status: ✅ COMPLETE (research baseline established)
Next: Session 03 - Phase 1 Upper Index Implementation

Artifacts: 2 files (metadata.yaml updated, Session 02 RAW log created)

--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -8,7 +8,7 @@ task:
   status: in_progress
   start_date: "2025-10-31"
   estimated_hours: 32  # 4 days × 8 hours
-  actual_hours: 1.2  # Day 1 Session 01: 1.2h (planning & analysis complete)
+  actual_hours: 1.8  # Day 1 Session 01: 1.2h, Session 02 Threads 01-03: ~0.6h research
 
 specs:
   prds:
@@ -28,6 +28,11 @@ git:
       date: "2025-10-31"
       files_changed: 5
       notes: "Day 1 (Session 1-01: 07:17-07:29 UTC): Documentation updates for M2 milestone transition. Added status snapshots to AGENTS.md, CLAUDE.md, README.md. Updated issue files to mark T-02-01 complete and T-02-02 in progress. 5 files, +62/-13 lines."
+    - hash: "5eb24a3"
+      message: "docs(worktree): T-02-02 worktree initialization and documentation setup"
+      date: "2025-10-31"
+      files_changed: 8
+      notes: "Day 1 (Pre-Session 02, ~0.1h): Worktree initialization - documentation structure with task-specific CLAUDE.md/AGENTS.md references, kanban analysis files (.tmp-kanban/), cleanup of local config. 8 files, +1,388/-562 lines."
 
 deliverables:
   - crates/cds-index/src/index/name_index.rs
@@ -60,9 +65,9 @@ dependencies:
     - T-02-04-serialization
 
 metrics:
-  lines_added: 62
-  lines_deleted: 13
-  files_modified: 5
+  lines_added: 1450   # 4f834f6: +62, 5eb24a3: +1,388
+  lines_deleted: 575  # 4f834f6: -13, 5eb24a3: -562
+  files_modified: 13  # Total unique files modified across both commits
   tests_added: 0
   test_coverage: 0.0
 
@@ -85,35 +90,15 @@ notes: |
     * Duration: 07:17-08:30 UTC (1.2h total)
     * Status: ✅ COMPLETE - All planning and setup finished
 
-  - Day 1 Session 02: [Phase 0] re-analysis & planning for development
-    * Phase 0: Reading and re-Analysis & re-Planning DEEPRESEARCH PRDs and Issues and Tasks for development
-      - .tmp-kanban/20251031/backlog/nextsteps-tasks-analysis-result.txt
-      - spacs/prd/0.1.0-MVP-PRDs-v0/01-system-architecture.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/02-cds-index-service.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/03-cds-tools-cli.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/04-cds-agent-integration.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/05-api-specifications.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/06-rust-refactoring-plan.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/07-deployment-operations.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/08-testing-quality.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/09-implementation-roadmap.md
-      - spacs/prd/0.1.0-MVP-PRDs-v0/10-extensibility-future.md
-      - spacs/issues/04-0.1.0-mvp/README.md
-      - spacs/issues/04-0.1.0-mvp/02-index-core/00-overview.md
-      - spacs/issues/04-0.1.0-mvp/02-index-core/01-graph-build.md
-      - spacs/issues/04-0.1.0-mvp/02-index-core/02-sparse-index.md
-      - spacs/issues/04-0.1.0-mvp/02-index-core/03-service-layer.md
-      - spacs/issues/04-0.1.0-mvp/02-index-core/04-serialization-fixtures.md
-      - spacs/tasks/0.1.0-mvp/TODO.yaml
-      - spacs/tasks/0.1.0-mvp/README.md
-      - spacs/tasks/0.1.0-mvp/02-index-core/README.md
-      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-01-graph-builder.md
-      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-02-sparse-index.md
-      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-03-service-layer.md
-      - spacs/tasks/0.1.0-mvp/02-index-core/T-02-04-serialization.md
-    * Thread ...
-    * RAW: WORK-SESSIONS-02-THREADS-01-XX-SUMMARY-2025-10-31.txt (will be created when Thread 01 begins)
-    * Status: NOT STARTED
+  - Day 1 Session 02: [Phase 0] re-analysis & planning for development (10:22-10:55 UTC, 0.55h)
+    * Thread 01 (10:22-10:30): Spec alignment & implementation gap analysis ✅
+    * Thread 02 (10:30-10:43): Parity assets + performance baselines review ✅
+    * Thread 03 (10:43-10:55): Implementation readiness checklist & roadmap ✅
+    * Key refs: spacs/prd/0.1.0-MVP-PRDs-v0/02, spacs/prd/0.1.0-MVP-PRDs-v0/06, spacs/tasks/0.1.0-mvp/TODO.yaml, spacs/issues/04-0.1.0-mvp/02-index-core/02-sparse-index.md, tests/fixtures/parity/*
+    * Outputs: Phase 1 execution roadmap, tooling prep list, follow-up action items
+    * Deferred doc reviews (target Session 03): PRD-01, PRD-03–PRD-10, issues 00/01/03/04, tasks README/T-02-03/T-02-04
+    * RAW: WORK-SESSIONS-02-THREADS-01-03-SUMMARY-2025-10-31.txt (Session 02 complete @ 10:55 UTC)
+    * Status: ✅ COMPLETE (Phase 0 research baseline locked)
 
   - Day 1 Session 03: [Phase 1] Upper Index Implementation (Threads 01-XX)
     * Phase--Session: Executing Phase 1 (Upper Index) implementation
