--- a/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
+++ b/.artifacts/spec-tasks-T-02-02-sparse-index/metadata.yaml
@@ -34,6 +34,12 @@ git:
       files_changed: 8
       notes: "Day 1 (Pre-Session 02, ~0.1h): Worktree initialization - documentation structure with task-specific CLAUDE.md/AGENTS.md references, kanban analysis files (.tmp-kanban/), cleanup of local config. 8 files, +1,388/-562 lines."
 
+  pr:
+    number: null
+    url: null
+    status: null  # draft | open | merged | closed
+    merged_at: null
+
 deliverables:
   - crates/cds-index/src/index/name_index.rs
   - crates/cds-index/src/index/bm25.rs
@@ -63,13 +69,6 @@ dependencies:
     - T-02-03-service-layer
     - T-03-01-cli-commands
     - T-02-04-serialization
-
-metrics:
-  lines_added: 1450   # 4f834f6: +62, 5eb24a3: +1,388
-  lines_deleted: 575  # 4f834f6: -13, 5eb24a3: -562
-  files_modified: 13  # Total unique files modified across both commits
-  tests_added: 0
-  test_coverage: 0.0
 
 notes: |
   Implementation Phases Plan (technical stages, 6-8 days total):
@@ -118,3 +117,25 @@ notes: |
   - Session: Work period (1-8 hours), one RAW log file
   - Thread: Continuous work unit (30min-2h), numbered sequentially
   - Phase: Implementation stage (Upper Index, Tokenizer, BM25, etc.)
+
+worklog:
+  base_path: ".artifacts/spec-tasks-T-02-02-sparse-index/worklogs/"
+  entries:
+    - date: "2025-10-31"
+      summary: "worklogs/2025-10-31-work-summary.md" # Phase-Session Daily work summary
+      commits: "worklogs/2025-10-31-commit-log.md" # Phase-Session Commit log
+      notes: "worklogs/2025-10-31-notes.md" # Phase-Session Checkpoint Technical notes
+      raw:
+        - "./worklogs/raw/WORK-SESSIONS-01-THREADS-01-03-SUMMARY-2025-10-31.txt"
+        - "./worklogs/raw/WORK-SESSIONS-02-THREADS-01-03-SUMMARY-2025-10-31.txt"
+
+metrics:
+  lines_added: 1450   # 4f834f6: +62, 5eb24a3: +1,388
+  lines_deleted: 575  # 4f834f6: -13, 5eb24a3: -562
+  files_modified: 13  # Total unique files modified across both commits
+  tests_added: 0
+  test_coverage: 0.0
+
+comments:
+
+related_artifacts:
